--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
         </div>
     </main>
     <footer></footer>
-    <script src="./js/app.js"></script>
+    <script type="module" src="./js/app.js"></script>
 </body>
 </html>
