--- a/index.html
+++ b/index.html
@@ -25,11 +25,7 @@
                 <input type="date" name="fecha-final" id="fecha-final">
                 <button class="submit" type="submit" id="submit">ACEPTAR</button>
             </div>
-            <div class="listas-semanas">
-                <div class="semana1"></div>
-                <div class="semana2"></div>
-                <div class="semana3"></div>
-                <div class="semana4"></div>
+            <div class="listas-semanas" id="listas-semanas">
             </div>
             <div class="lista-compras"></div>
         </div>
