logica en botones

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <input type="date" name="fecha-inicio" id="fecha-inicio">
                 <input type="date" name="fecha-final" id="fecha-final">
                 <button class="submit" type="submit" id="submit">ACEPTAR</button>
+                <button class="submit" type="reset" id="resetBtn">LIMPIAR</button>
             </div>
             <div class="listas-semanas" id="listas-semanas">
             </div>
